--- a/app/stylesheets/foundation/_settings.scss
+++ b/app/stylesheets/foundation/_settings.scss
@@ -1465,3 +1465,4 @@ $include-html-global-classes: $include-html-classes;
 // $include-accessibility-classes: true;
 // $include-table-visibility-classes: true;
 // $include-legacy-visibility-classes: true;
+$topbar-bg:#444;
