--- a/app/stylesheets/post.scss
+++ b/app/stylesheets/post.scss
@@ -1,5 +1,10 @@
+.index-container{  
+  padding-top: 1em;
+}
 .index-list{ 
+    list-style:none;
     min-height: 10em;
     display: table-cell;
-    vertical-align: middle
+    vertical-align: middle;
+    text-align:center;
 }
