--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,4 +1,4 @@
-<ul class="small-block-grid-4">
+<ul class="small-block-grid-4 index-container">
   <% @posts.each do |post| %>
     <li class="index-list">
       <%= image_tag post.image_url(:thumb) %>
