--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,1 +1,1 @@
-.index-list{min-height:10em;display:table-cell;vertical-align:middle}
+.index-container{padding-top:1em}.index-list{list-style:none;min-height:10em;display:table-cell;vertical-align:middle;text-align:center}
