--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -11,7 +11,7 @@
     <title><%= @title.present? ? "#{@title} | Padrino Admin" : "Padrino Admin" %></title>
     <%= favicon_tag "favicon.ico" %>
     <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
-    <%= stylesheet_link_tag 'application' %>
+    <%= stylesheet_link_tag 'application', 'post' %>
     <%= javascript_include_tag 'vendor/modernizr' %>
   </head>
 
