added unicorn to Gemfile

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -16,8 +16,8 @@
   </head>
 
     <%= javascript_include_tag 'vendor/jquery', 'vendor/fastclick' %>
-  </body>
   <body>
+  <%= image_tag("Newlogo.png") %>
   <div class="row">
     <div class="small-12 small-centered">
       <%=partial 'layouts/menu'%>
