--- a/app/stylesheets/post.scss
+++ b/app/stylesheets/post.scss
@@ -1,3 +1,4 @@
+
 .index-container{  
   padding-top: 1em;
 }
@@ -7,4 +8,7 @@
     display: table-cell;
     vertical-align: middle;
     text-align:center;
+}
+li.index-list{  
+  border-bottom:1px dotted grey;
 }
