--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,1 +1,1 @@
-.index-container{padding-top:1em}.index-list{list-style:none;min-height:3em;display:table-cell;vertical-align:middle;text-align:center}
+.index-container{padding-top:1em}.index-list{list-style:none;min-height:3em;display:table-cell;vertical-align:middle;text-align:center}li.index-list{border-bottom:1px dotted grey}
