--- a/app/views/bases/index.erb
+++ b/app/views/bases/index.erb
@@ -13,3 +13,54 @@
 <p class="center body-wrapper">
  <%= @post.body %>
 </p>
+<div class="comment-form">
+  
+  <!---------------------------------------------------if they are logged -->
+<% if logged_in? %>
+
+  <% form_tag url_for(:comments, :create), 
+    method: :post  do %>
+      <%= label_tag :comment %><br />
+      <%= text_field_tag :comment %>
+    <p>
+      <%= hidden_field_tag :post_id, value: @post.id %>
+    </p>
+    <p>
+      <%= hidden_field_tag :user_id, value: current_user.id %>
+    </p>
+    <p class="button"><%= submit_tag %></p>
+  <%end %>
+
+  <%#----<%= @post.comments.inspect %>
+  <ul class="comment-container">
+    <% @post.comments.each do |c| %>
+      <li class="comment-item">
+        <%= c.comment %>
+    </li>
+      <li class="comment-item">
+        <%= gravatar_for(c.user) %>
+    </li>
+    <li class="comment-item time-ago">
+      <%= time_ago_in_words(c.created_at)%> ago
+    </li>
+  <% end%>
+  </ul>
+
+<%else%>
+<p>
+<strong>
+  In order to comment you must log in or sign up
+</strong>
+  <ul>
+    <li>
+      <%= link_to"login", url_for(:sessions, :new) %>
+    </li>
+    <li>
+      <%= link_to "signup", url_for(:users, :new) %>
+    </li>
+</ul>
+</p>
+<!-- comment for this post -->
+<%end%>
+</div>
+
