added some glyphicons to bases/index

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -4,8 +4,9 @@
 @import "post";
 @import "navigation";
 @import "settings";
+@import "variables";
+@import "mixins";
 
-$grey-charcoal: #2E2E2E;
 body{ background: #000; }
 .main-wrapper{ background:#fff; 
   min-height:10em;
