--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -12,7 +12,7 @@
     <%= favicon_tag "favicon.ico" %>
     <link type="text/css" rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
     <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
-    <%= stylesheet_link_tag 'application', 'post', 'bases'%>
+    <%= stylesheet_link_tag 'application', 'post', 'bases', 'comment'%>
     <%= javascript_include_tag 'vendor/modernizr' %>
   </head>
 
