--- a/app/stylesheets/_variables.scss
+++ b/app/stylesheets/_variables.scss
@@ -1,2 +1,6 @@
 $grey-charcoal: #2E2E2E;
 $standard-line-height: 2em;
+$green-grey: #95B5b7;
+$greenblue: #709C9E;
+$gree-green: #5f8241;
+$base-black: #151611;
