--- a/app/stylesheets/comment.scss
+++ b/app/stylesheets/comment.scss
@@ -11,6 +11,14 @@
   border-bottom:dotted .1em  #000;
   @include border-radius(.5em);
 }
-.comment-large{  
+.icon-large{  
   font-size:2em;
+  opacity:.6;
+}
+.icon-small{  
+  font-size:.5em;
+  font-family: "arial";
+  font-style:italic;
+  opacity:.6;
+  color:#333;
 }
