added menu styling social glyphicons

--- a/app/stylesheets/_variables.scss
+++ b/app/stylesheets/_variables.scss
@@ -2,5 +2,5 @@ $grey-charcoal: #2E2E2E;
 $standard-line-height: 2em;
 $green-grey: #95B5b7;
 $greenblue: #709C9E;
-$gree-green: #5f8241;
+$green-green: #5f8241;
 $base-black: #151611;
