--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -23,6 +23,6 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-  <p class="button"><%= f.submit %></p>
+  <p class="center"><%= f.submit "Signup", class: "button radius" %></p>
 <% end %>
 
