gussied up the menu added search/index posts/_post

--- a/app/stylesheets/post.scss
+++ b/app/stylesheets/post.scss
@@ -13,3 +13,9 @@
 li.index-list{  
   border-bottom:1px dotted grey;
 }
+.search-results{  
+  list-style-type:none;
+}
+.serach-results li{  
+  text-align:left;
+}
