--- a/app/views/layouts/_menu.erb
+++ b/app/views/layouts/_menu.erb
@@ -1,39 +1,25 @@
 <div class="row">
-  <div class="small-6 columns">
-  <i class="fi-home">&nbsp<%=link_to('Home',url('/')) %></i>
-  <i class="fi-archive">&nbsp<%=link_to('Archive', url_for(:posts, :index)) %></i>
+  <div class="small-6 columns top-links">
+  <i class="fi-home"><%=link_to('Home',url('/')) %></i>|
+  <i class="fi-archive"><%=link_to('Archive', url_for(:posts, :index)) %></i>|
 
  
   <% if current_user %>
   <i class="fi-minus-circle">
     <%= link_to "Log out", url_for(:sessions, :destroy) %>
-  </i>
+  </i>|
+  <%=link_to "<i class=fi-rss></i>".html_safe, url('/posts.rss')%>
+  
   <% else %>
     <i class="fi-pencil">
       <%= link_to "Sign up", url_for(:users, :new) %> 
-    </i>
+    </i>|
     <i class="fi-unlock">
     <%= link_to "log in", url_for(:sessions, :new) %>
-  </i>
-
+  </i>|
   <% end %>
-  <i class="fi-rss">
-    <%= link_to "Feed", url('/posts.atom') %>
-
-</i>
 </div>
-<div class="small-6 columns">
-<div class="large-6 columns">
-      <div class="row collapse prefix-round">
-        <div class="small-3 columns">
-          <a href="#" class="button prefix">Go</a>
-        </div>
-        <div class="small-9 columns">
-          <input type="text" placeholder="Value">
-        </div>
-      </div>
-    </div>
+  <%= partial '/layouts/search' %>
 </div>
 
 
-</div>
