--- a/app/stylesheets/bases.scss
+++ b/app/stylesheets/bases.scss
@@ -80,15 +80,29 @@
   text-align:center;
 }
 
-.search-form
-{
-	vertical-align:top;
-	text-align:center;
 
+.search-form input[type=submit]{  
+  background:$coral;
+  color:#eee;
+  margin-right:1px;
+  border:1px solid white;
 }
-.search-form input[type="text"]
-{
-	margin: 0;
+.search-form input[type=text]{  
+  background:$grey-charcoal;
+  border:white 1px solid;
+  color:#eee;
+  width:20em;
+
+  -webkit-border-radius: 0 1em 1em 0;
+     -moz-border-radius: 0 1em 1em 0;
+      -ms-border-radius: 0 1em 1em 0;
+          border-radius: 0 1em 1em 0;
 }
-
-
+.top-links{  
+  color:$coral;
+  font-size:1.1em;
+}
+.top-links a{  
+  color:$coral;
+}
+.search-form{ float:right; }
