--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,1 +1,1 @@
-.title-wrapper{margin:2em;padding:1.5em;line-height:1.8em}.index-container{padding-top:1em}.index-list{list-style:none;min-height:3em;display:table-cell;vertical-align:middle;text-align:center}li.index-list{border-bottom:1px dotted grey}
+.title-wrapper{margin:2em;padding:1.5em;line-height:1.8em}.index-container{padding-top:1em}.index-list{list-style:none;min-height:3em;display:table-cell;vertical-align:middle;text-align:center}li.index-list{border-bottom:1px dotted grey}.search-results{list-style-type:none}.serach-results li{text-align:left}
