--- a/app/views/search/index.erb
+++ b/app/views/search/index.erb
@@ -1,6 +1,11 @@
+<% unless @posts.blank? %>
 <ul class="search-results">
-<div class="row">
+<div class="row search-container">
       <li><%= partial '/posts/post', collection:@posts  %></li>
 </div>
-
 </ul>
+<% else %>
+  <span class="no-results">
+    <h1>Your search term rendered no results</h1>
+  </span>
+<%end%>
