--- a/app/views/layouts/_search.erb
+++ b/app/views/layouts/_search.erb
@@ -1,3 +1,7 @@
+<% if false %>
+  top bar search form
+  bases stylesheet
+<%end%>
 
 <div class="small-6 columns search-form">
   <form action="/search", method="get">
