--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -41,5 +41,11 @@
 </div>
 
 </div>
+
+<div class="row">
+  <div class="small-10 footer-wrapper small-centered">
+</div>
+</div>
+<%=partial 'layouts/footer' %>
   </body>
 </html>
