--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -1,6 +1,15 @@
-<h1>fred</h1>
-
+<div class="small-3 columns copyright">
+  &copy 2015 tuning-in 
+</div>
+<div class="small-7 columns footer-menu">
+  <%= link_to("about", url_for(:bases, :about)) %>
+  <%= mail_to("hjoanne62@gmail.com","contact",
+              { subject:"Contact from tuning-in",
+                cc:"remotezen@bell.net"
+              }) %>
+</div>
 <% if false %>
+  stylesheet bases
 <% end %>
 
 
