--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -6,18 +6,13 @@
 @import "settings";
 @import "variables";
 @import "mixins";
+img{ max-width:100%; }
 
 body{ background: #000; }
 .main-wrapper{ background:#fff; 
   min-height:10em;
   text-align:center;
-  width:800px;
-
   margin-top:1em;
-
-  padding-left:1.6em;
-  padding-right:1.6em;
-
 }
 .center{ 
   margin-left:auto;
