--- a/app/views/layouts/_menu.erb
+++ b/app/views/layouts/_menu.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="small-6 columns top-links">
+<div class="row display">
+  <div class="small-6 columns  top-links">
   <i class="fi-home"><%=link_to('Home',url('/')) %></i> |
   <i class="fi-archive"><%=link_to('Archive', url_for(:posts, :index)) %></i> |
 
