--- a/app/views/search/index.erb
+++ b/app/views/search/index.erb
@@ -1,6 +1,6 @@
 <% unless @posts.blank? %>
 <ul class="search-results">
-<div class="row search-container">
+<div class="search-container">
       <li><%= partial '/posts/post', collection:@posts  %></li>
 </div>
 </ul>
@@ -9,3 +9,8 @@
     <h1>Your search term rendered no results</h1>
   </span>
 <%end%>
+  <div class="small-12 center small-centered search-counter">
+    <%= pluralize(@posts.count, "result") %>
+</div>
+  
+</div>
