--- a/app/views/layouts/_menu.erb
+++ b/app/views/layouts/_menu.erb
@@ -8,7 +8,7 @@
   <i class="fi-minus-circle">
     <%= link_to "Log out", url_for(:sessions, :destroy) %>
   </i>|
-  <%=link_to "<i class=fi-rss></i>".html_safe, url('/posts.rss')%>
+  <%=link_to "<i class=fi-rss></i>".html_safe, url('/posts.atom')%>
   
   <% else %>
     <i class="fi-pencil">
