--- a/app/views/layouts/_search.erb
+++ b/app/views/layouts/_search.erb
@@ -2,12 +2,11 @@
   top bar search form
   bases stylesheet
 <%end%>
-
 <div class="small-6 columns search-form">
   <form action="/search", method="get">
       <div class="row collapse prefix-round">
         <div class="small-2 columns">
-          <input type="submit" value="search" class="search-input button round prefix">Go</a>
+          <input type="submit"  value= " "class="search-input button round prefix">
         </div>
         <div class="small-10 columns">
           <input type="text" name="search" placeholder="search the site... ">
