--- a/app/views/shared/_comment.erb
+++ b/app/views/shared/_comment.erb
@@ -6,13 +6,13 @@
   <ul class="comment-container center" id="comment" >
     <% comment.comments.reverse.each do |c| %>
      <li class="comment-user-name">
-      <%= gravatar_for(c.user, { size:80 }) %>
+      <%= gravatar_for(c.user, { size:30 }) %>
       <span class="time-ago">
         <%= time_ago_in_words(c.created_at)%> ago
     </span>
     </li>
     <li class="user-comment">
-        <%= c.comment %>
+    <%=word_wrap("#{c.comment}", { :line_width => 6 }) %>
     <li>
   <%end%>
   </ul>
