--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -49,3 +49,43 @@ body{ background: #000; }
 .top-bar-section ul li.active > a:hover {
     background: #444444 !important;   
 }
+
+  .archive-container{  
+    padding:1em;
+    background:#EEE;
+    @include border-radius(8px);
+  }
+  .created-at{  
+    text-align:center;
+    font-size: .6rem;
+    background:#efe;
+    padding:4px 8px 4px 4px;
+  }
+
+  .archive-container{  
+    font-size:.8em;
+    padding:4px;
+    background:#EEE;
+    @include border-radius(8px);
+  }
+  .created-at{  
+    text-align:center;
+    margin-top:1rem;
+    font-size: .6rem;
+    background:#efe;
+    padding:4px 8px 4px 4px;
+  }
+  .button{  
+    background:$coral;
+  }
+  .time-ago-now{  
+    background:#eff;
+    font:.7rem italic verdana;
+    padding:4px;
+    opacity:.5;
+  }
+  .archive-image{  
+    margin-bottom:1rem;
+  }
+
+
