--- a/app/views/shared/_comment.erb
+++ b/app/views/shared/_comment.erb
@@ -2,18 +2,16 @@
 <%#comments partial for bases/index  %>
 <%=partial 'comments/comment_header', object:comment%>
 <%#above in the header file for this partial  %>
-
-  <ul class="comment-container center" id="comment" >
+<%#sytling in mobile and in application %>
+<p>
     <% comment.comments.reverse.each do |c| %>
-     <li class="comment-user-name">
       <%= gravatar_for(c.user, { size:30 }) %>
-      <span class="time-ago">
+      <span class="time-ago-now">
         <%= time_ago_in_words(c.created_at)%> ago
     </span>
-    </li>
-    <li class="user-comment">
-    <%=word_wrap("#{c.comment}", { :line_width => 6 }) %>
-    <li>
+      
+
+    <%=word_wrap("#{c.comment}",  :line_width => 6 ) %>
+</p>
   <%end%>
-  </ul>
 <!-- comment for this post -->
