--- a/app/views/shared/_comment_form.erb
+++ b/app/views/shared/_comment_form.erb
@@ -10,7 +10,7 @@
       <%= hidden_field_tag :post_id, value: comment_form.id %>
       <%= hidden_field_tag :user_id, value: current_user.id %>
 
-    <p class="comment-submit center"><%= submit_tag "Comment", class:"button radius" %></p>
+    <p class="comment-submit center"><%= submit_tag "Comment", class:"small button radius" %></p>
   <%end %>
 
 </div>
