added better calendar helper

--- a/app/stylesheets/mobile.scss
+++ b/app/stylesheets/mobile.scss
@@ -95,6 +95,9 @@
   .archive-image{  
     margin-bottom:1rem;
   }
+  .search-header a{  
+    color: $archive-link;
+  }
 
 }
 /* special styling for phone ends */ 
