--- a/app/views/layouts/no_mast_head.erb
+++ b/app/views/layouts/no_mast_head.erb
@@ -34,5 +34,13 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="small-12 footer-menu small-centered">
+    <div class="footer-wrapper center">
+        <%=partial 'layouts/footer' %>
+</div>
+</div>
+</div>
   </body>
 </html>
