--- a/app/stylesheets/_variables.scss
+++ b/app/stylesheets/_variables.scss
@@ -4,4 +4,5 @@ $green-grey: #95B5b7;
 $greenblue: #709C9E;
 $green-green: #5f8241;
 $base-black: #151611;
-$coral:#FF7F50 
+$coral: #FF7F50; 
+$archive-link: #187DE2;
