--- a/app/views/shared/_comment.erb
+++ b/app/views/shared/_comment.erb
@@ -7,10 +7,10 @@
     <% comment.comments.reverse.each do |c| %>
       <%= gravatar_for(c.user, { size:30 }) %>
       <span class="time-ago-now">
-        <%= time_ago_in_words(c.created_at)%> ago
+        <%= post_date(c) %>
     </span>
       
-
+    <br>
     <%=word_wrap("#{c.comment}",  :line_width => 6 ) %>
 </p>
   <%end%>
